# taskbar-manager-webui

./: .gitignore  CMakeLists.txt  buildAndPack.ps1  index.html  main.cpp  webui-windows-msvc-download.ps1
include/: TrayIcon.h
src/: TrayIcon.cpp
